# libsvg

./: .gitignore  MAINTAINERS  Makefile.am  README  README.md  RELEASING  autogen.sh  configure.in  libsvg.pc.in  libsvg.sln
libsvg/: libsvg.vcxproj  libsvg.vcxproj.filters
libsvg/lib_x64/: uriparser.lib
libsvg/lib_x86/: uriparser.lib
libsvg/src/: svg.c  svg_ascii.c  svg_ascii.h  svg_attribute.c  svg_clip_path.c  svg_color.c  svg_container.c  svg_css_style.c  svg_dom.c  svg_element.c  svg_element_ref.c  svg_gradient.c  svg_group.c  svg_hash.c  svg_hash.h  svg_image.c  svg_length.c  svg_marker.c  svg_mask.c  svg_paint.c  svg_parser.c  svg_parser_expat.c  svg_path.c  svg_pattern.c  svg_render_engine.c  svg_resource.c  svg_shapes.c  svg_str.c  svg_style.c  svg_svg_group.c  svg_symbol.c  svg_text.c  svg_trace.c  svg_transform.c  svg_uri.c  svg_uri_reference.c  svg_use.c  svg_view_box.c  svgint.h  win32_compat.h
